--- a/src/org/opensaml/ws/wssecurity/package.html
+++ b/src/org/opensaml/ws/wssecurity/package.html
@@ -4,7 +4,7 @@
 XMLObject interfaces for WS-Security 2004 elements.
 </p>
 <p>
-The <a href="http://docs.oasis-open.org/wss/v1.1/wss-v1.1-spec-os-SOAPMessageSecurity.pdf" target="wss-oasis">Web Services Security: SOAP Message Security 1.1 (WS-Security 2004)</a> specification describes enhancements to SOAP messaging to provide message integrity and confidentialy. This specification also provides a general-purpose mechanism for associating security tokens with message content.
+The OASIS <a href="http://docs.oasis-open.org/wss/v1.1/wss-v1.1-spec-os-SOAPMessageSecurity.pdf" target="wss-oasis">Web Services Security: SOAP Message Security 1.1 (WS-Security 2004)</a> specification describes enhancements to SOAP messaging to provide message integrity and confidentialy. This specification also provides a general-purpose mechanism for associating security tokens with message content.
 </p>
 <p>
 The security token profiles currently supported are:
