--- a/src/org/opensaml/ws/wstrust/package.html
+++ b/src/org/opensaml/ws/wstrust/package.html
@@ -4,7 +4,7 @@
 XMLObject interfaces for WS-Trust 1.3 elements.
 </p>
 <p>
-The <a target="wst-oasis" href="http://docs.oasis-open.org/ws-sx/ws-trust/200512/ws-trust-1.3-os.pdf">WS-Trust 1.3</a> specification defines extensions that build on [WS-Security 2004] to provide a framework for 
+The OASIS <a target="wst-oasis" href="http://docs.oasis-open.org/ws-sx/ws-trust/200512/ws-trust-1.3-os.pdf">WS-Trust 1.3</a> specification defines extensions that build on [WS-Security 2004] to provide a framework for 
 requesting and issuing security tokens, and to broker trust relationships.
 </p>
 </BODY>
